cmake_minimum_required(VERSION 3.5)
set(CMAKE_CXX_STANDARD 20)

project(core)
file(GLOB_RECURSE SOURCES CONFIGURE_DEPENDS src/core/*.cpp src/util/*.cpp)
add_library(${PROJECT_NAME} STATIC ${SOURCES})
include_directories(${PROJECT_NAME} PUBLIC src)
if(WIN32)
    target_link_libraries(${PROJECT_NAME} PRIVATE ws2_32)
else()
    target_link_libraries(${PROJECT_NAME} PRIVATE pthread)
endif()

project(test)
file(GLOB_RECURSE SOURCES CONFIGURE_DEPENDS src/test/test.cpp)
add_executable(${PROJECT_NAME} ${SOURCES})
include_directories(${PROJECT_NAME} PUBLIC src)
target_link_libraries(${PROJECT_NAME} PUBLIC core)

project(memory)
file(GLOB_RECURSE SOURCES CONFIGURE_DEPENDS src/test/memory.cpp)
add_executable(${PROJECT_NAME} ${SOURCES})
include_directories(${PROJECT_NAME} PUBLIC src)
target_link_libraries(${PROJECT_NAME} PUBLIC core)

project(cpu)
file(GLOB_RECURSE SOURCES CONFIGURE_DEPENDS src/test/cpu.cpp)
add_executable(${PROJECT_NAME} ${SOURCES})
include_directories(${PROJECT_NAME} PUBLIC src)
target_link_libraries(${PROJECT_NAME} PUBLIC core)
